Updated a few extra htmls for recipes

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <p> <a href="./recipes/garlic-salmon.html">Garlic Salmon with Butter and Lemon Recipe</a></p>
+    <p> <a href="./recipes/ground-beef-pasta.html">Ground Beef Pasta Recipe</a></p>
+
 </body>
 </html>
