--- a/recipes/garlic-salmon.html
+++ b/recipes/garlic-salmon.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Garlic-Salmon-Page</title>
+    <title>Garlic Salmon Recipe</title>
 </head>
 
 <body>
