Added a 3rd recipes page titled Thai-Chicken-Cucumber-Salad

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Odin Recipes</h1>
     <p> <a href="./recipes/garlic-salmon.html">Garlic Salmon with Butter and Lemon Recipe</a></p>
     <p> <a href="./recipes/ground-beef-pasta.html">Ground Beef Pasta Recipe</a></p>
+    <p> <a href="./recipes/thai-chicken-cucumber-salad.html">Thai Chicken and Cucumber Salad</a></p>
+
 
 </body>
 </html>
