--- a/recipes/garlic-salmon.html
+++ b/recipes/garlic-salmon.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <h1><a href="../index.html">Home Page</a></h1>
+
     <h1>Garlic Salmon</h1>
     <img src="../images/Healthy-Salmon-recipe-with-Garlic-Butter.jpg" height="500" width="400"
         alt="Picture of a cooked salmon meal">
