--- a/recipes/ground-beef-pasta.html
+++ b/recipes/ground-beef-pasta.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <h1>Garlic Salmon</h1>
+    <h1><a href="../index.html">Home Page</a></h1>
+    <h1>Ground Beef Pasta</h1>
     <img src="../images/Ground-Beef-Pasta.jpg" height="500" width="400"
         alt="Picture of a ground beef pasta dish">
     <h3>Description</h3>
